new projects, updated readme